--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,11 +14,31 @@ pipeline {
 				sh 'cp -r sonarqube-scanner-scripts/* .'
 				sh './sonar-scanner-4.6.2.2472-linux/bin/sonar-scanner'
 				sh 'ls -al'
+				sh 'cat .scannerwork/report-task.txt  | mail -s "build-no-${BUILD_NUMBER}-reports" nihas0505@gmail.com'
             }
         }
-        stage('send mail reports') {
+        stage('SCA') {
             steps {
-                sh 'cat .scannerwork/report-task.txt  | mail -s "build-no-${BUILD_NUMBER}-reports" nihas0505@gmail.com'
+				sh 'echo sca stage'
+            }
+        }
+
+        stage('jmeter') {
+            steps {
+				sh 'git clone https://github.com/harishpallapu/folder.git'
+				sh 'cd folder'
+				sh 'chmod 777 *'
+				sh './apache-jmeter-5.4.1/apache-jmeter-5.4.1/bin/jmeter -n -t OnlineShop_1.jmx -l OnlineShop_result_${BUILD_NUMBER}.jtl -e -o OnlineShop_${BUILD_NUMBER}.html'
+				sh 'zip OnlineShop_${BUILD_NUMBER}.html jmeterreport.zip '
+				sh 'echo please checkjemeter report html file attachment  | mail -s "jmeter-build-no-${BUILD_NUMBER}-reports" nihas0505@gmail.com -A jmeterreport.zip'
+				
+            }
+        }
+		stage('jmeter') {
+            steps {
+				sh 'pwd'
+				sh 'git clone https://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@github.com/harishpallapu/test-reports.git'
+				sh 'ls'
             }
         }
     }
