--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,8 +28,8 @@ pipeline {
 	    			sh 'pwd'
 				sh 'ls -al'
 				sh 'git clone https://github.com/harishpallapu/folder.git'
-				sh 'cd folder'
-					chmod 777 *'
+				sh 'cd folder
+					chmod 777 *
 					./apache-jmeter-5.4.1/apache-jmeter-5.4.1/bin/jmeter -n -t OnlineShop_1.jmx -l OnlineShop_result_${BUILD_NUMBER}.jtl -e -o OnlineShop_${BUILD_NUMBER}.html'
 					zip OnlineShop_${BUILD_NUMBER}.html jmeterreport.zip '
 					echo please checkjemeter report html file attachment  | mail -s "jmeter-build-no-${BUILD_NUMBER}-reports" nihas0505@gmail.com -A jmeterreport.zip'
