--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,19 +31,18 @@ pipeline {
 				sh '''cd folder
 					chmod 777 -R *
 					./apache-jmeter-5.4.1/apache-jmeter-5.4.1/bin/jmeter -n -t OnlineShop_1.jmx -l OnlineShop_result_${BUILD_NUMBER}.jtl -e -o OnlineShop_${BUILD_NUMBER}.html 
-					zip jmeterreport.zip OnlineShop_${BUILD_NUMBER}.html/*
-					echo please checkjemeter report html file attachment  | mail -s "jmeter-build-no-${BUILD_NUMBER}-reports" nihas0505@gmail.com -A jmeterreport.zip'''
+					zip -r jmeterreport.zip OnlineShop_${BUILD_NUMBER}.html/*'''
 				
             }
         }
 	stage('upload reports to nexus') {
             steps {
 				sh 'mkdir test-reports'
-				sh 'cp -r folder/OnlineShop_${BUILD_NUMBER}.html test-reports'
+				sh 'cp -r folder/jmeterreport.zip test-reports'
 				sh '''cp .scannerwork/report-task.txt test-reports
 				    cd test-reports
-				    zip report.zip .
-				    curl --upload-file report.zip -u admin:admin -v http://15.206.195.157:8081/repository/jenkins-reports/'''
+				    curl --upload-file report-task.txt -u admin:admin -v http://15.206.195.157:8081/repository/jenkins-reports/
+				    curl --upload-file jmeterreport.zip -u admin:admin -v http://15.206.195.157:8081/repository/jenkins-reports/'''
             }
         }
     }
