--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,9 @@ pipeline {
         }
         stage('SCA') {
             steps {
-				sh 'echo sca stage'
+				sh 'wget https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.2/dependency-check-6.2.2-release.zip '
+				sh 'unzip -q dependency-check-6.2.2-release.zip'
+				sh './dependency-check-6.2.2-release/dependency-check/bin/dependency-check.sh --project "TeachersFCU" --scan "Shoppingcartfortest" --format HTML --out .'
             }
         }
 
