--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,10 +19,12 @@ pipeline {
         }
         stage('SCA') {
             steps {
+	    catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
 				sh 'wget https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.2/dependency-check-6.2.2-release.zip'
 				sh 'unzip -q dependency-check-6.2.2-release.zip'
 				sh './dependency-check/bin/dependency-check.sh --noupdate --project "TeachersFCU" --scan "Shoppingcart/lib/" --format HTML --out .'
             }
+	    }
         }
 
         stage('jmeter') {
