--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,20 @@ pipeline {
             }
 	    }
         }
-
+	stage('build') {
+            steps {
+	    			sh 'mvn clean package'
+				
+            }
+	 }
+	stage('build') {
+            steps {
+	    	sshagent(['deploy_user']) {
+    				sh 'scp -o StrictHostKeyChecking=no target/*.war ec2-user@13.235.95.191:/opt/tomcat/webapps'
+				
+		}		
+            }
+	}
         stage('jmeter') {
             steps {
 	    			sh 'pwd'
