--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
 				
             }
 	 }
-	stage('build') {
+	stage('deploy to tomcat') {
             steps {
 	    	sshagent(['deploy_user']) {
     				sh 'scp -o StrictHostKeyChecking=no target/*.war ec2-user@13.235.95.191:/opt/tomcat/webapps'
