--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,8 +34,10 @@ pipeline {
 	 }
 	stage('deploy to tomcat') {
             steps {
-	    	sshagent(['deploy_user']) {
-    				sh 'scp -o StrictHostKeyChecking=no target/*.war ec2-user@13.235.95.191:/opt/tomcat/webapps'
+	    
+	    			sshagent(['deploy_user']) {
+				sh 'ls -R'
+    				sh 'scp -o StrictHostKeyChecking=no target/*.war ec2-user@13.235.95.191:/opt/tomcat/webapps/'
 				
 		}		
             }
