--- a/jenkinsfile
+++ b/jenkinsfile
@@ -61,5 +61,13 @@ pipeline {
 				    curl --upload-file jmeterreport-${BUILD_NUMBER}.zip -u admin:admin -v http://13.232.127.170:8081/repository/jenkins-reports/'''
             }
         }
+	post {
+        // Clean after build
+        always {
+            cleanWs(cleanWhenNotBuilt: false,
+                    deleteDirs: true,
+                    disableDeferredWipeout: true)
+        }
+    }
     }
 }
