--- a/jenkinsfile
+++ b/jenkinsfile
@@ -85,6 +85,7 @@ pipeline {
 		mail to: 'nihas0505@gmail.com',
           	subject: "Status of pipeline: ${currentBuild.fullDisplayName}",
          	body: "${env.BUILD_URL} has result ${currentBuild.result}"
+		jiraSendBuildInfo site: '<sitename>.atlassian.net'
 		cleanWs(cleanWhenNotBuilt: false,
                     deleteDirs: true,
                     disableDeferredWipeout: true)
