--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     stages {
         stage('source code checkout') {
             steps {
-                git '${params.SAST_GIT_URL}'
+                git "${params.SAST_GIT_URL}"
 				sh 'git clone https://github.com/harishpallapu/sonarqube-scanner-scripts.git'
             }
         }
@@ -40,27 +40,27 @@ pipeline {
 	stage('deploy to tomcat') {
             steps {
 	    	sshagent(['deploy_user']) {
-    				sh 'scp -o StrictHostKeyChecking=no target/*.war ec2-user@${params.TOMCAT_IP}:/opt/tomcat/webapps'		
+    				sh "scp -o StrictHostKeyChecking=no target/*.war ec2-user@${params.TOMCAT_IP}:/opt/tomcat/webapps"		
 		}		
             }
 	}
 	stage('FunctionalAutomation_Web') {
            steps {
 		   catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
-	    			sh '''git clone ${params.FUNCTIONAL_WEB_GIT_URL}
+	    			sh """git clone ${params.FUNCTIONAL_WEB_GIT_URL}
 					cd webtest
 					mvn test
-				    zip -r web-test-report-${BUILD_NUMBER}.zip src/test/java/com/shoppingcart/Reports/* '''		
+				    zip -r web-test-report-${BUILD_NUMBER}.zip src/test/java/com/shoppingcart/Reports/* """		
             }
 			}
 	 }
 		stage('FunctionalAutomation_Mobile') {
             steps {
 			catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
-	    			sh ''' git clone ${params.FUNCTIONAL_MOBILE_GIT_URL}
+	    			sh """ git clone ${params.FUNCTIONAL_MOBILE_GIT_URL}
 					cd lastestmobile
 					mvn test
-					zip -r mobile-test-report-${BUILD_NUMBER}.zip src/test/java/com/shoppingcart/Reports/* '''			
+					zip -r mobile-test-report-${BUILD_NUMBER}.zip src/test/java/com/shoppingcart/Reports/* """			
             }
 			}
 	 }
@@ -83,10 +83,10 @@ pipeline {
 	    			sh 'pwd'
 				sh 'ls -al'
 				sh 'git clone ${params.JMETER_GIT_URL}'
-				sh '''cd folder
+				sh """cd folder
 					chmod 777 -R *
 					./apache-jmeter-5.4.1/apache-jmeter-5.4.1/bin/jmeter -n -t OnlineShop_1.jmx -l OnlineShop_result_${BUILD_NUMBER}.jtl -e -o OnlineShop_${BUILD_NUMBER}.html 
-					zip -r jmeterreport-${BUILD_NUMBER}.zip OnlineShop_${BUILD_NUMBER}.html/*'''
+					zip -r jmeterreport-${BUILD_NUMBER}.zip OnlineShop_${BUILD_NUMBER}.html/* """
 				
             }
         }
@@ -98,14 +98,14 @@ pipeline {
 				sh 'cp -r webtest/web-test-report-$BUILD_NUMBER.zip test-reports'
 				sh 'cp -r lastestmobile/mobile-test-report-$BUILD_NUMBER.zip test-reports'
 				sh 'cp -r dast-reports/report-${BUILD_NUMBER}.zip test-reports'
-				sh '''
+				sh """
 				    cd test-reports
 				    mv report-task.txt report-task-${BUILD_NUMBER}.txt
 				    curl --upload-file report-task-${BUILD_NUMBER}.txt -u admin:admin -v http://${params.NEXUS_IP}:8081/repository/jenkins-reports/sast-reports/
 					curl --upload-file web-test-report-${BUILD_NUMBER}.zip -u admin:admin -v http://${params.NEXUS_IP}:8081/repository/jenkins-reports/web-test-reports/
 					curl --upload-file mobile-test-report-${BUILD_NUMBER}.zip -u admin:admin -v http://${params.NEXUS_IP}:8081/repository/jenkins-reports/mobile-test-reports/
 					curl --upload-file report-${BUILD_NUMBER}.zip -u admin:admin -v http://${params.NEXUS_IP}:8081/repository/jenkins-reports/dast-reports/
-				    curl --upload-file jmeterreport-${BUILD_NUMBER}.zip -u admin:admin -v http://${params.NEXUS_IP}:8081/repository/jenkins-reports/jmeter-reports/ '''
+				    curl --upload-file jmeterreport-${BUILD_NUMBER}.zip -u admin:admin -v http://${params.NEXUS_IP}:8081/repository/jenkins-reports/jmeter-reports/ """
             }
         }
 	}
