--- a/jenkinsfile
+++ b/jenkinsfile
@@ -82,7 +82,7 @@ pipeline {
             steps {
 	    			sh 'pwd'
 				sh 'ls -al'
-				sh 'git clone ${params.JMETER_GIT_URL}'
+				sh "git clone ${params.JMETER_GIT_URL}"
 				sh """cd folder
 					chmod 777 -R *
 					./apache-jmeter-5.4.1/apache-jmeter-5.4.1/bin/jmeter -n -t OnlineShop_1.jmx -l OnlineShop_result_${BUILD_NUMBER}.jtl -e -o OnlineShop_${BUILD_NUMBER}.html 
