--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
 	parameters {
 	    string(name: 'SAST_GIT_URL', defaultValue: 'https://github.com/harishpallapu/SourceCode_SAST.git', description: 'sast source code git url')
 	    string(name: 'FUNCTIONAL_WEB_GIT_URL', defaultValue: 'https://github.com/harishpallapu/webtest.git', description: 'functional automation web source code git url')
-	    string(name: 'FUNCTIONAL_MOBILE_GIT_URL', defaultValue: 'https://github.com/harishpallapu/lastestmobile.git', description: 'functional automation mobile source code git url')
+	    string(name: 'FUNCTIONAL_MOBILE_GIT_URL', defaultValue: 'https://github.com/harishpallapu/ultranewmobile.git', description: 'functional automation mobile source code git url')
 		string(name: 'JMETER_GIT_URL', defaultValue: 'https://github.com/harishpallapu/folder.git', description: 'jmeter source code git url')
         string(name: 'TOMCAT_IP', defaultValue: '15.206.168.88', description: 'tomcat server ip address')
 		string(name: 'NEXUS_IP', defaultValue: '52.66.245.120', description: 'nexus server ip address')
@@ -57,7 +57,7 @@ pipeline {
             steps {
 			catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
 	    			sh """ git clone ${params.FUNCTIONAL_MOBILE_GIT_URL}
-					cd lastestmobile
+					cd ultranewmobile
 					mvn test """
             }
 			}
@@ -90,7 +90,7 @@ pipeline {
 	stage('upload reports to nexus') {
             steps {
 	    			sh 'zip -r web-test-report-${BUILD_NUMBER}.zip webtest/src/test/java/com/shoppingcart/Reports/*'
-	    			sh 'zip -r mobile-test-report-${BUILD_NUMBER}.zip lastestmobile/target/surefire-reports/*'
+	    			sh 'zip -r mobile-test-report-${BUILD_NUMBER}.zip ultranewmobile/src/test/java/com/shoppingcart/Reports/*'
 				sh 'zip -r jmeterreport-${BUILD_NUMBER}.zip folder/OnlineShop_${BUILD_NUMBER}.html/*'
 				
 				sh 'mkdir test-reports'
