--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,11 +25,19 @@ pipeline {
         }
         stage('SCA') {
             steps {
-	    catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
-				sh 'wget https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.2/dependency-check-6.2.2-release.zip'
-				sh 'unzip -q dependency-check-6.2.2-release.zip'
-				sh './dependency-check/bin/dependency-check.sh --noupdate --project "TeachersFCU" --scan "Shoppingcart/lib/" --format HTML --out .'
-            }
+			      script {
+						try {
+							sh 'wget https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.2/dependency-check-6.2.2-release.zip'
+							sh 'unzip -q dependency-check-6.2.2-release.zip'
+							sh './dependency-check/bin/dependency-check.sh --noupdate --project "TeachersFCU" --scan "Shoppingcart/lib/" --format HTML --out .'
+						
+						} catch (err) {
+							echo err.getMessage()
+							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+							JiraFunction()
+						}
+				}
+
 	    }
         }
 	stage('build') {
@@ -144,3 +152,6 @@ pipeline {
         }
     }
 }
+void JiraFunction() {
+    sh ("""curl -D- -H "Authorization: Basic dmFtc2lraXJhbnJlZGR5QGdtYWlsLmNvbTpxdkRZSTNWbUNJdWUzWlZyZ2NiVTA5MjA=" -X POST --data '{"fields":{"project":{"key": "JJI"},"summary": "${env.JOB_NAME} ${env.STAGE_NAME} stage is failed build no-${env.BUILD_NUMBER}.","description": "${env.STAGE_NAME} stage failed.\\n Build URL $BUILD_URL \\n Build Number {env.BUILD_NUMBER} ","issuetype": {"name": "Task"}}}' -H "Content-Type: application/json" https://vamsisanagala.atlassian.net/rest/api/2/issue""")
+	}
