--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,6 +41,7 @@ pipeline {
 						
 						} catch (err) {
 							echo err.getMessage()
+							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
 							JiraFunction()
 						}
