--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
 						
 						} catch (err) {
 							echo err.getMessage()
-							unstable(message: "${STAGE_NAME} is unstable")
+							result = "FAIL"
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
 							JiraFunction()
 						}
